# caddy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  conversion.py  difference.py  environment.yml  main.py  pyproject.toml  requirements.txt
caddy/: __init__.py  conversion.py  difference.py  exporting.py  helpers.py  pre_process_3d_shapes.py  shapely_utilities.py  to_gpkg.py
caddy/deprecated/: difference.py
caddy/difference/: __init__.py  blocks.py  documents.py  entities.py  file_level_diff.py  sections.py  tags.py
caddy/exporting/: __init__.py  blocks.py  shaped_entities.py  to_file.py  to_mapping.py
caddy/ezdxf_utilities/: __init__.py  handles.py  operations.py  sections.py  tags.py  transformation.py
caddy/model/: all.py
caddy/shapely_utilities/: all.py
caddy/visualisation/: __init__.py  colors.py  plotting.py  render_dxf.py
docs/: CNAME  Makefile  make.bat
docs/source/: conf.py  getting_started.rst  index.rst
samples/: convert.py  convert_dxf_file.py  difference.py  document_differences.py  furniture_block_inserts.py  get_block_inserts.py  out.gpkg  per_layer.py  render.py  this.py  visulise_block_inserts.py
samples/deprecated/: compute_entity_difference.py
samples/deprecated/experiments/: conversion.py
samples/experiments/: conversion.py  per_layer.py  run_file_diff_sample.py
tests/: test_import.py
tests/fixtures/: Z0_Groundfloor_Jacuna.dxf
